--- a/index.html
+++ b/index.html
@@ -17,84 +17,103 @@
 </head>
 
 <body>
-    <header>
-        <div class="container header-wrapper">
-            <nav class="header-navigation">
-                <a href="./index.html"><img src="./images/logo.png" alt="Site logo"></a>
-                <ul class="navigation-list">
-                    <li class="navigation-item">
-                        <a class="navigation-link" href="./index.html">
-                            <p>Home</p>
-                        </a>
+    <div class="wrapper">
+        <header>
+            <div class="container header-wrapper">
+                <nav class="header-navigation">
+                    <a href="./index.html"><img src="./images/logo.png" alt="Site logo"></a>
+                    <ul class="navigation-list">
+                        <li class="navigation-item">
+                            <a class="navigation-link" href="./index.html">
+                                <p>Home</p>
+                            </a>
+                        </li>
+                        <li class="navigation-item">
+                            <a class="navigation-link" href="#">
+                                <p>Project</p>
+                            </a>
+                        </li>
+                        <li class="navigation-item">
+                            <a class="navigation-link" href="#">
+                                <p>Service</p>
+                            </a>
+                        </li>
+                        <li class="navigation-item">
+                            <a class="navigation-link" href="#">
+                                <p>About</p>
+                            </a>
+                        </li>
+                        <li class="navigation-item">
+                            <a class="navigation-link" href="#">
+                                <p>Blog</p>
+                            </a>
+                        </li>
+                        <li class="navigation-item">
+                            <a class="navigation-link" href="#">
+                                <p>Shop</p>
+                            </a>
+                        </li>
+                        <li class="navigation-item">
+                            <a class="navigation-link" href="#">
+                                <p>Contact</p>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+                <button class="header-button" type="submit">Sign Up</button>
+            </div>
+        </header>
+        <main>
+            <section class="first-section container">
+                <div class="text-content">
+                    <h3 class="section-title">Modern Interior</h3>
+                    <h1 class="title">Create Your Interior Design.</h1>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                        veniam, quis nostrud exercitation.</p>
+                    <button class="button" type="submit">Contact</button>
+                </div>
+                <img class="image" src="./images/large-img-1.jpg" alt="Armchair and lamp">
+                <div class="bg-outline"></div>
+            </section>
+            <img class="first-left-deco" src="./images/polka-img.png" alt="Polka image">
+            <section class="second-section container">
+                <h3 class="section-title">What We Do</h3>
+                <h2 class="title">Our Service</h2>
+                <ul class="list">
+                    <li class="item">
+                        <img class="item-icon" src="./images/icon-interior-design.png" alt="Interior Design icon" width="40" height="40">
+                        <div class="item-container">
+                            <h4 class="item-title">Interior Design</h4>
+                            <p class="item-text">Lorem ipsum dolor amet consectetur
+                            adipiscing elit sed eiusmod tempor
+                            incididunt ut labore.</p>
+                        </div>
                     </li>
-                    <li class="navigation-item">
-                        <a class="navigation-link" href="#">
-                            <p>Project</p>
-                        </a>
+                    <li class="item">
+                        <img class="item-icon" src="./images/icon-architecture.png" alt="Architecture icon" width="40" height="40">
+                        <div class="item-container">
+                            <h4 class="item-title">Architecture</h4>
+                            <p class="item-text">Lorem ipsum dolor amet consectetur
+                            adipiscing elit sed eiusmod tempor
+                            incididunt ut labore.</p>
+                        </div>
                     </li>
-                    <li class="navigation-item">
-                        <a class="navigation-link" href="#">
-                            <p>Service</p>
-                        </a>
-                    </li>
-                    <li class="navigation-item">
-                        <a class="navigation-link" href="#">
-                            <p>About</p>
-                        </a>
-                    </li>
-                    <li class="navigation-item">
-                        <a class="navigation-link" href="#">
-                            <p>Blog</p>
-                        </a>
-                    </li>
-                    <li class="navigation-item">
-                        <a class="navigation-link" href="#">
-                            <p>Shop</p>
-                        </a>
-                    </li>
-                    <li class="navigation-item">
-                        <a class="navigation-link" href="#">
-                            <p>Contact</p>
-                        </a>
+                    <li class="item">
+                        <img class="item-icon" src="./images/icon-planning.png" alt="Planning icon" width="40" height="40">
+                        <div class="item-container">
+                            <h4 class="item-title">Planning</h4>
+                            <p class="item-text">Lorem ipsum dolor amet consectetur
+                            adipiscing elit sed eiusmod tempor
+                            incididunt ut labore.</p>
+                        </div>
                     </li>
                 </ul>
-            </nav>
-            <button class="header-button" type="submit">Sign Up</button>
-        </div>
-    </header>
-    <main>
-        <section class="first-section container">
-            <div class="text-content">
-                <h3 class="section-title">Modern Interior</h3>
-                <h1 class="title">Create Your Interior Design.</h1>
-                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                    veniam, quis nostrud exercitation.</p>
-                <button class="button" type="submit">Contact</button>
-            </div>
-            <img class="image" src="./images/large-img-1.jpg" alt="Armchair and lamp">
-            <div class="bg-outline"></div>
-        </section>
-        <section class="second-section container">
-            <h3 class="section-title"></h3>
-            <h2 class="title"></h2>
-            <ul class="list">
-                <li class="item">
-                    <h4 class="item-title"></h4>
-                    <p class="item-text"></p>
-                </li>
-                <li class="item">
-                    <h4 class="item-title"></h4>
-                    <p class="item-text"></p>
-                </li>
-                <li class="item">
-                    <h4 class="item-title"></h4>
-                    <p class="item-text"></p>
-                </li>
-            </ul>
-        </section>
-    </main>
-    <footer></footer>
+            </section>
+            <img class="first-right-deco" src="./images/polka-img.png" alt="Polka image">
+        </main>
+        <footer></footer>
+    </div>
 </body>
 
 </html>
