--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <img class="image" src="./images/large-img-1.jpg" alt="Armchair and lamp">
                 <div class="bg-outline"></div>
             </section>
-            <img class="first-left-deco" src="./images/polka-img.png" alt="Polka image">
+            <img class="first-left-deco" src="./images/polka-img.png" alt="Polka image" width="164">
             <section class="second-section container">
                 <h3 class="section-title">What We Do</h3>
                 <h2 class="title">Our Service</h2>
