--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     </li>
                 </ul>
             </section>
-            <img class="first-right-deco" src="./images/polka-img.png" alt="Polka image">
+            <img class="first-right-deco" src="./images/polka-img.png" alt="Polka image" width="164">
         </main>
         <footer></footer>
     </div>
