--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
                 <img class="image" src="./images/large-img-1.jpg" alt="Armchair and lamp">
                 <div class="bg-outline"></div>
             </section>
-            <img class="first-left-deco" src="./images/polka-img.png" alt="Polka image" width="164">
+            <div class="deco-container">
+                <img class="first-left-deco" src="./images/polka-img.png" alt="Polka image" width="110">
+            </div>
             <section class="second-section container">
                 <h3 class="section-title">What We Do</h3>
                 <h2 class="title">Our Service</h2>
@@ -87,7 +89,7 @@
                             <h4 class="item-title">Interior Design</h4>
                             <p class="item-text">Lorem ipsum dolor amet consectetur
                             adipiscing elit sed eiusmod tempor
-                            incididunt ut labore.</p>
+                            incididunt.</p>
                         </div>
                     </li>
                     <li class="item">
@@ -96,7 +98,7 @@
                             <h4 class="item-title">Architecture</h4>
                             <p class="item-text">Lorem ipsum dolor amet consectetur
                             adipiscing elit sed eiusmod tempor
-                            incididunt ut labore.</p>
+                            incididunt.</p>
                         </div>
                     </li>
                     <li class="item">
@@ -105,12 +107,12 @@
                             <h4 class="item-title">Planning</h4>
                             <p class="item-text">Lorem ipsum dolor amet consectetur
                             adipiscing elit sed eiusmod tempor
-                            incididunt ut labore.</p>
+                            incididunt.</p>
                         </div>
                     </li>
                 </ul>
             </section>
-            <img class="first-right-deco" src="./images/polka-img.png" alt="Polka image" width="164">
+            <img class="first-right-deco" src="./images/polka-img.png" alt="Polka image" width="110">
         </main>
         <footer></footer>
     </div>
