--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
                 </ul>
             </section>
             <img class="first-right-deco" src="./images/polka-img.png" alt="Polka image" width="110">
+            <section>
+                
+            </section>
         </main>
         <footer></footer>
     </div>
