--- a/index.html
+++ b/index.html
@@ -84,37 +84,66 @@
                 <h2 class="title">Our Service</h2>
                 <ul class="list">
                     <li class="item">
-                        <img class="item-icon" src="./images/icon-interior-design.png" alt="Interior Design icon" width="40" height="40">
+                        <img class="item-icon" src="./images/icon-interior-design.png" alt="Interior Design icon"
+                              width="40" height="40">
                         <div class="item-container">
                             <h4 class="item-title">Interior Design</h4>
                             <p class="item-text">Lorem ipsum dolor amet consectetur
-                            adipiscing elit sed eiusmod tempor
-                            incididunt.</p>
+                                adipiscing elit sed eiusmod tempor
+                                incididunt.</p>
                         </div>
                     </li>
                     <li class="item">
-                        <img class="item-icon" src="./images/icon-architecture.png" alt="Architecture icon" width="40" height="40">
+                        <img class="item-icon" src="./images/icon-architecture.png" alt="Architecture icon" width="40"
+                              height="40">
                         <div class="item-container">
                             <h4 class="item-title">Architecture</h4>
                             <p class="item-text">Lorem ipsum dolor amet consectetur
-                            adipiscing elit sed eiusmod tempor
-                            incididunt.</p>
+                                adipiscing elit sed eiusmod tempor
+                                incididunt.</p>
                         </div>
                     </li>
                     <li class="item">
-                        <img class="item-icon" src="./images/icon-planning.png" alt="Planning icon" width="40" height="40">
+                        <img class="item-icon" src="./images/icon-planning.png" alt="Planning icon" width="40"
+                              height="40">
                         <div class="item-container">
                             <h4 class="item-title">Planning</h4>
                             <p class="item-text">Lorem ipsum dolor amet consectetur
-                            adipiscing elit sed eiusmod tempor
-                            incididunt.</p>
+                                adipiscing elit sed eiusmod tempor
+                                incididunt.</p>
                         </div>
                     </li>
                 </ul>
             </section>
             <img class="first-right-deco" src="./images/polka-img.png" alt="Polka image" width="110">
-            <section>
-                
+            <section class="third-section container">
+                <div class="text-content">
+                    <h3 class="section-title">About Us</h3>
+                    <h2 class="title">Interioris The Will of An Epoch Mextreo</h2>
+                    <p class="text">There are many variations of passages of Lorem Ipsum available,
+                    but the majority have suffered alteration in some form injected
+                    humour, or randomised words which don't look even slightly
+                    believable.If you are going to use a passage of Lorem Ipsum,
+                    sure there isn't anything embarrassing hidden the middleof text.
+                    All the Lorem Ipsum generators on the Internettend to repeat
+                    predefined chunks as necessary,making this the first true
+                    generator on the Internet.</p>
+                    <button class="button" type="submit">Learn more</button>
+                </div>
+                <img class="image" src="./images/large-img-2.jpg" alt="Sofa">
+                <div class="bg-outline"></div>
+            </section>
+            <img class="second-left-deco" src="./images/polka-img.png" alt="Polka image" width="110">
+            <section class="fourth-section container">
+                <div class="text-content">
+                    <img class="number" src="./images/20-img.png" alt="20 years image">
+                    <h2 class="title">Years Of Successful
+                    Working
+                    The Market</h2>
+                    <button class="button" type="submit">Contact</button>
+                </div>
+                <img class="image" src="./images/large-img-3.jpg" alt="Armchair and lamp">
+                <div class="bg-outline"></div>
             </section>
         </main>
         <footer></footer>
