--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
                     <h3 class="section-title">About Us</h3>
                     <h2 class="title">Interioris The Will of An Epoch Mextreo</h2>
                     <p class="text">There are many variations of passages of Lorem Ipsum available,
-                    but the majority have suffered alteration in some form injected
-                    humour, or randomised words which don't look even slightly
-                    believable.If you are going to use a passage of Lorem Ipsum,
-                    sure there isn't anything embarrassing hidden the middleof text.
-                    All the Lorem Ipsum generators on the Internettend to repeat
-                    predefined chunks as necessary,making this the first true
-                    generator on the Internet.</p>
+                        but the majority have suffered alteration in some form injected
+                        humour, or randomised words which don't look even slightly
+                        believable.If you are going to use a passage of Lorem Ipsum,
+                        sure there isn't anything embarrassing hidden the middleof text.
+                        All the Lorem Ipsum generators on the Internettend to repeat
+                        predefined chunks as necessary,making this the first true
+                        generator on the Internet.</p>
                     <button class="button" type="submit">Learn more</button>
                 </div>
                 <img class="image" src="./images/large-img-2.jpg" alt="Sofa">
@@ -138,9 +138,9 @@
                 <div class="text-content">
                     <img class="number" src="./images/20-img.png" alt="20 years image">
                     <h2 class="title">Years Of Successful
-                    Working
-                    The Market</h2>
-                    <button class="button" type="submit">Contact</button>
+                        Working
+                        The Market</h2>
+                    <button class="button" type="submit">Read More</button>
                 </div>
                 <img class="image" src="./images/large-img-3.jpg" alt="Armchair and lamp">
                 <div class="bg-outline"></div>
