--- a/index.html
+++ b/index.html
@@ -137,9 +137,7 @@
             <section class="fourth-section container">
                 <div class="text-content">
                     <img class="number" src="./images/20-img.png" alt="20 years image">
-                    <h2 class="title">Years Of Successful
-                        Working
-                        The Market</h2>
+                    <h2 class="title">Years Of Successful Working The Market</h2>
                     <button class="button" type="submit">Read More</button>
                 </div>
                 <img class="image" src="./images/large-img-3.jpg" alt="Armchair and lamp">
