--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
                         veniam, quis nostrud exercitation.</p>
                     <button class="button" type="submit">Contact</button>
                 </div>
-                <img class="image" src="./images/large-img-1.jpg" alt="Armchair and lamp">
                 <div class="bg-outline"></div>
+                <img class="image" src="./images/large-img-1.jpg" alt="Armchair and lamp">
+                <div class="fog"></div>
             </section>
             <div class="deco-container">
                 <img class="first-left-deco" src="./images/polka-img.png" alt="Polka image" width="110">
@@ -130,8 +131,9 @@
                         generator on the Internet.</p>
                     <button class="button" type="submit">Learn more</button>
                 </div>
-                <img class="image" src="./images/large-img-2.jpg" alt="Sofa">
                 <div class="bg-outline"></div>
+                <img class="image" src="./images/large-img-2.jpg" alt="Sofa">
+                <div class="fog"></div>
             </section>
             <img class="second-left-deco" src="./images/polka-img.png" alt="Polka image" width="110">
             <section class="fourth-section container">
@@ -140,8 +142,9 @@
                     <h2 class="title">Years Of Successful Working The Market</h2>
                     <button class="button" type="submit">Read More</button>
                 </div>
-                <img class="image" src="./images/large-img-3.jpg" alt="Armchair and lamp">
                 <div class="bg-outline"></div>
+                <img class="image" src="./images/large-img-3.jpg" alt="Armchair and lamp">
+                <div class="fog"></div>
             </section>
         </main>
         <footer></footer>
