renamed for to overlay

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
                 <div class="bg-outline"></div>
                 <img class="image" src="./images/large-img-1.jpg" alt="Armchair and lamp">
-                <div class="fog"></div>
+                <div class="overlay"></div>
             </section>
             <div class="deco-container">
                 <img class="first-left-deco" src="./images/polka-img.png" alt="Polka image" width="110">
@@ -133,7 +133,7 @@
                 </div>
                 <div class="bg-outline"></div>
                 <img class="image" src="./images/large-img-2.jpg" alt="Sofa">
-                <div class="fog"></div>
+                <div class="overlay"></div>
             </section>
             <img class="second-left-deco" src="./images/polka-img.png" alt="Polka image" width="110">
             <section class="fourth-section container">
@@ -144,7 +144,7 @@
                 </div>
                 <div class="bg-outline"></div>
                 <img class="image" src="./images/large-img-3.jpg" alt="Armchair and lamp">
-                <div class="fog"></div>
+                <div class="overlay"></div>
             </section>
         </main>
         <footer></footer>
