--- a/index.html
+++ b/index.html
@@ -146,6 +146,45 @@
                 <img class="image" src="./images/large-img-3.jpg" alt="Armchair and lamp">
                 <div class="overlay"></div>
             </section>
+            <section class="fifth-section">
+                <div class="container">
+                    <h2 class="title">3000+ Completed Work<br>
+                        Which We have Successfully Done</h2>
+                    <ul class="list">
+                        <li class="item">
+                            <p class="number">900</p>
+                            <p class="text">Projects</p>
+                        </li>
+                        <li class="vector">
+                            <svg width="146" height="66">
+                                <use href="./images/icons.svg#broken_line"></use>
+                            </svg>
+                        </li>
+                        <li class="item">
+                            <p class="number">520</p>
+                            <p class="text">Happy clients</p>
+                        </li>
+                        <li class="vector">
+                            <svg width="146" height="66">
+                                <use href="./images/icons.svg#broken_line"></use>
+                            </svg>
+                        </li>
+                        <li class="item">
+                            <p class="number">330</p>
+                            <p class="text">Winners</p>
+                        </li>
+                        <li class="vector">
+                            <svg width="146" height="66">
+                                <use href="./images/icons.svg#broken_line"></use>
+                            </svg>
+                        </li>
+                        <li class="item">
+                            <p class="number">120</p>
+                            <p class="text">Recoment</p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
         </main>
         <footer></footer>
     </div>
