--- a/index.html
+++ b/index.html
@@ -154,27 +154,21 @@
                         <li class="item">
                             <p class="number">900</p>
                             <p class="text">Projects</p>
-                        </li>
-                        <li class="vector">
-                            <svg width="146" height="66">
+                            <svg class="vector" width="146" height="66">
                                 <use href="./images/icons.svg#broken_line"></use>
                             </svg>
                         </li>
                         <li class="item">
                             <p class="number">520</p>
                             <p class="text">Happy clients</p>
-                        </li>
-                        <li class="vector">
-                            <svg width="146" height="66">
+                            <svg class="vector" width="146" height="66">
                                 <use href="./images/icons.svg#broken_line"></use>
                             </svg>
                         </li>
                         <li class="item">
                             <p class="number">330</p>
                             <p class="text">Winners</p>
-                        </li>
-                        <li class="vector">
-                            <svg width="146" height="66">
+                            <svg class="vector" width="146" height="66">
                                 <use href="./images/icons.svg#broken_line"></use>
                             </svg>
                         </li>
@@ -183,6 +177,94 @@
                             <p class="text">Recoment</p>
                         </li>
                     </ul>
+                </div>
+            </section>
+            <section class="sixth-section">
+                <div class="container">
+                    <h3 class="section-title">
+                        Testimonials
+                    </h3>
+                    <h2 class="title">
+                        Client says about us
+                    </h2>
+                    <ul class="list">
+                        <li class="item">
+                            <div class="image-wrapper">
+                                <img class="image" src="./images/testimonials-img-1.jpg" alt="Testimonials image">
+                            </div>
+                            <p class="item-title">Louis Saville
+                                <span class="item-title-detail"> /CEO at Google Inc</span>
+                            </p>
+                            <p class="item-text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing
+                                elit, sed do eiusmod tempor incididunt ut labore
+                                et dolore magna aliqua.
+                            </p>
+                            <svg class="vector" width="32" height="32">
+                                <use href="./images/icons.svg#quote"></use>
+                            </svg>
+                        </li>
+                        <li class="item">
+                            <div class="image-wrapper">
+                                <img class="image" src="./images/testimonials-img-2.jpg" alt="Testimonials image">
+                            </div>
+                            <p class="item-title">Rekha Varadwaz
+                                <span class="item-title-detail"> /Manager at Nike Inc</span>
+                            </p>
+                            <p class="item-text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing
+                                elit, sed do eiusmod tempor incididunt ut labore
+                                et dolore magna aliqua.
+                            </p>
+                            <svg class="vector" width="32" height="32">
+                                <use href="./images/icons.svg#quote"></use>
+                            </svg>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <section class="seventh-section">
+                <div class="container">
+                    <h3 class="section-title">Latest news</h3>
+                    <h2 class="title">From Our Blog</h2>
+                    <ul class="list">
+                        <li class="item">
+                            <div class="bg-outline">
+                                <div class="item-image-wrapper">
+                                    <img class="item-image" src="./images/blog-img-1.jpg" alt="Blog image">
+                                </div>
+                            </div>
+                            <p class="item-title">2020 Interior Design Trends</p>
+                            <p class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                incididunt ut labore et dolore magna aliqua.
+                            </p>
+                            <button class="button" type="submit">Continue reading...</button>
+                        </li>
+                        <li class="item">
+                            <div class="bg-outline">
+                                <div class="item-image-wrapper">
+                                    <img class="item-image" src="./images/blog-img-2.jpg" alt="Blog image">
+                                </div>
+                            </div>
+                            <p class="item-title">28 Notable Product at ARC Interior Design</p>
+                            <p class="item-text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                incididunt ut labore et dolore magna aliqua.
+                            </p>
+                            <button class="button" type="submit">Continue reading...</button>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <section class="eighth-section">
+                <div class="container">
+                    <h2 class="title">Don't forget to sign up</h2>
+                    <p class="text">Find out early about all upcoming promotions and new product releases with
+                        our newsletter.</p>
+                    <div class="input-wrapper">
+                        <input class="input-field" type="email" placeholder="Enter your email address">
+                        <button class="button" type="submit">Subscribe</button>
+                    </div>
                 </div>
             </section>
         </main>
