--- a/index.html
+++ b/index.html
@@ -114,6 +114,24 @@
                     </div>
                 </li>
             </ul>
+            <div class="slider-controls-container">
+                <ul class="slider-controls-list">
+                    <li class="slider-controls-item">
+                        <button type="button" class="slider-controls">
+                            <svg>
+                                <use href=""></use>
+                            </svg>
+                        </button>
+                    </li>
+                    <li class="slider-controls-item">
+                        <button type="button" class="slider-controls">
+                            <svg>
+                                <use href=""></use>
+                            </svg>
+                        </button>
+                    </li>
+                </ul>
+            </div>
         </section>
         <img class="first-right-deco" src="./images/polka-img.png" alt="Polka image" width="110">
         <section class="third-section container">
@@ -216,6 +234,24 @@
                         <svg class="vector" width="32" height="32">
                             <use href="./images/icons.svg#quote"></use>
                         </svg>
+                    </li>
+                </ul>
+            </div>
+            <div class="slider-controls-container">
+                <ul class="slider-controls-list">
+                    <li class="slider-controls-item">
+                        <button type="button" class="slider-controls">
+                            <svg>
+                                <use href=""></use>
+                            </svg>
+                        </button>
+                    </li>
+                    <li class="slider-controls-item">
+                        <button type="button" class="slider-controls">
+                            <svg>
+                                <use href=""></use>
+                            </svg>
+                        </button>
                     </li>
                 </ul>
             </div>
